--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,7 @@ split_before_closing_bracket = false
 spaces_around_default_or_named_assign = true
 dedent_closing_brackets = true
 blank_line_before_nested_class_or_def = false
+
+[tool.pylint.MESSAGES_CONTROL]
+disable= "C,I,R,bad-indentation"
+
