--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ combine_as_imports=true
 
 [tool.ruff]
 target-version = "py39"
+
+[tool.ruff.lint]
 select = ["E", "F"]
 ignore = ["E501", "E402"]
 
